Revert "fix notification description alignment"
This reverts commit 033bc6898de257b4e0be9019c459b206728fc1c2.

--- a/src/scss/Notifications.scss
+++ b/src/scss/Notifications.scss
@@ -30,9 +30,7 @@
 }
 
 .notif-desc {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: sticky;
     width: 50%;
     overflow: auto;
 }
